# spiceio

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
benches/: crypto_bench.rs  protocol_bench.rs  s3_bench.rs
scripts/: bench-live.sh  stress-concurrent.sh  test-sccache-spiceai.sh  test-sccache.sh
src/: lib.rs  log.rs  main.rs
src/crypto/: ffi.rs  mod.rs
src/s3/: auth.rs  body.rs  headers.rs  mod.rs  multipart.rs  router.rs  xml.rs
src/smb/: auth.rs  client.rs  mod.rs  ops.rs  pool.rs  protocol.rs
