[package]
name = "spiceio"
version = "0.4.2"
edition = "2024"
description = "S3-compatible API proxy to SMB file shares"
license = "Apache-2.0"

[lib]
name = "spiceio"
path = "src/lib.rs"

[[bin]]
name = "spiceio"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "sync", "time"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
http-body = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util", "timeout"] }
http = "1"
bytes = "1"
percent-encoding = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "protocol_bench"
harness = false

[[bench]]
name = "s3_bench"
harness = false

[lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
